2015-10-02  Pierre Aubert  <pierreaubert@imac-de-pierre.local>

	* roles/webservers/tasks/nginx.yml: looks like naxsi moved to
	nginx-full on ubuntu15.04

	* roles/databases/tasks/postgresql.yml: add a block for ubuntu 15.04

	* roles/hardware/handlers/main.yml: creation

	* roles/hardware/tasks/eaton.yml: fighting with nut, add new
	packages but i can't get the client to run; server still fine but
	ssl not working, i let the server run only on the loopback

2015-06-15  Pierre Aubert  <pierreaubert@iMac-de-Pierre.local>

	* roles/common/tasks/python.yml: add certifi for ssl connection
	see: https://urllib3.readthedocs.org/en/latest/security.html#certifi-with-urllib3

2015-06-12  Pierre Aubert  <pierreaubert@iMac-de-Pierre.local>

	* roles/common/tasks/python.yml: some rules are only for precise

	* roles/common/tasks/monit.yml: add libssl-dev

2015-04-27  Pierre Aubert  <pierreaubert@iMac-de-Pierre.local>

	* roles/admin/vars/main.yml (visage_port): conflit avec mesos

2015-04-23  Pierre Aubert  <pierreaubert@iMac-de-Pierre.local>

	* roles/admin/tasks/kibana.yml: not perfect define -e update=yes
	if it does not work out of the box

	* roles/hardware/templates/fstab (UUID): add a backup from ubuntu1 fstab

	* roles/webservers/handlers/main.yml: add a reload handler for nginx

2015-03-06  Pierre Aubert  <pierreaubert@iMac-de-Pierre.local>

	* mono-mesos.yml: typo

2015-02-27  Pierre Aubert  <pierreaubert@iMac-de-Pierre.local>

	* roles/common/tasks/python.yml: change pip config, new pip do not
	need cache

2015-02-26  Pierre Aubert  <pierreaubert@iMac-de-Pierre.local>

	* roles/common/tasks/logrotate.yml: jons->jobs (typo), hours->hour
	upgrade for ansible 1.8.4

2014-07-04  Pierre Aubert  <pierre@imac-pierre.home>

	* version 1.0

	* grafana working

	* monit complete

	* time to go to next level

	* roles/hardware/templates/collectd/collectd.conf.d/nut.conf.j2:
	to many quotes; now working hard work just for this :(
