@@ -11,6 +11,7 @@ deploy_password: none
 deploy_servers: 
   - 192.168.0.9
   - 192.168.1.9
+  - 192.168.1.25
   - 10.0.2.2
 deploy_gateways: 
   - 192.168.0.1
