@@ -1,2 +1,2 @@
 # all hosts in multi conf
-ubuntu ansible_ssh_host=192.168.1.18 ansible_ssh_port=22
+pierre ansible_ssh_host=192.168.1.18 ansible_ssh_port=22
