@@ -1,13 +1,18 @@
 [masters]
-mesos-master1 ansible_ssh_host=192.168.122.50 ansible_ssh_port=22
-mesos-master2 ansible_ssh_host=192.168.122.3  ansible_ssh_port=22
-mesos-master3 ansible_ssh_host=192.168.122.75 ansible_ssh_port=22
+ubuntu ansible_ssh_host=192.168.1.18 ansible_ssh_port=22
 [slaves]
-mesos-slave1 ansible_ssh_host=192.168.122.179  ansible_ssh_port=22
-mesos-slave2 ansible_ssh_host=192.168.122.7    ansible_ssh_port=22
-mesos-slave3 ansible_ssh_host=192.168.122.111  ansible_ssh_port=22
-mesos-slave4 ansible_ssh_host=192.168.122.49   ansible_ssh_port=22
-mesos-slave5 ansible_ssh_host=192.168.122.172  ansible_ssh_port=22
-mesos-slave6 ansible_ssh_host=192.168.122.236  ansible_ssh_port=22
-mesos-slave7 ansible_ssh_host=192.168.122.138  ansible_ssh_port=22
-mesos-slave8 ansible_ssh_host=192.168.122.77   ansible_ssh_port=22
+ubuntu ansible_ssh_host=192.168.1.18 ansible_ssh_port=22
+
+# [masters]
+# mesos-master1 ansible_ssh_host=192.168.122.50 ansible_ssh_port=22
+# mesos-master2 ansible_ssh_host=192.168.122.3  ansible_ssh_port=22
+# mesos-master3 ansible_ssh_host=192.168.122.75 ansible_ssh_port=22
+# [slaves]
+# mesos-slave1 ansible_ssh_host=192.168.122.179  ansible_ssh_port=22
+# mesos-slave2 ansible_ssh_host=192.168.122.7    ansible_ssh_port=22
+# mesos-slave3 ansible_ssh_host=192.168.122.111  ansible_ssh_port=22
+# mesos-slave4 ansible_ssh_host=192.168.122.49   ansible_ssh_port=22
+# mesos-slave5 ansible_ssh_host=192.168.122.172  ansible_ssh_port=22
+# mesos-slave6 ansible_ssh_host=192.168.122.236  ansible_ssh_port=22
+# mesos-slave7 ansible_ssh_host=192.168.122.138  ansible_ssh_port=22
+# mesos-slave8 ansible_ssh_host=192.168.122.77   ansible_ssh_port=22
