@@ -1,6 +1,6 @@
 ---
 - name: fail2ban | install 
-  apt: name={{ item }} state=present
+  apt: name={{item}} state=present
   with_items:
     - fail2ban
     - rkhunter
