@@ -89,6 +89,7 @@ UsePAM yes
 
 AllowUsers pierre@192.168.0.9
 AllowUsers pierre@192.168.1.9
+AllowUsers pierre@192.168.1.25
 
 # {% for ip in deploy_servers %}
 # AllowUsers {{deploy_user}}@{{ip}}
