@@ -1,2 +1,2 @@
 # for now
-zk://167.114.66.195:2181/mesos
+zk://192.168.1.18/mesos
